@@ -1,5 +1,7 @@
 Revision history for Perl extension AnyEvent.
 
+	- undo the import WIN32 hack.
+
 4.04 Mon May 26 08:03:31 CEST 2008
 	- try to work around yet another windows bug: failed connects are reported
           as if it were out-of-band data. windows users: you suck. Only
@@ -8,7 +10,7 @@ Revision history for Perl extension AnyEvent.
 	- properly parse PERL_ANYEVENT_PROTOCOLS and use the info correctly.
         - tcp_connect now properly iterates through all targets.
 	- check wether IPv6 sockets can actually be created, otherwise, disable ipv6
-          support entirely. also hardcode some AF_INEt6 constants for the
+          support entirely. also hardcode some AF_INET6 constants for the
           sake of perl 5.8.
         - vastly improved nameserver/suffix detection algorithm for windows
           (still a hack...)
